# label-309-cli

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: cli.rs  lib.rs  main.rs  secret.rs
src/commands/: certificate.rs  completion.rs  gateway.rs  identity.rs  inbox.rs  merkle.rs  mod.rs  sign.rs  submit.rs  verify.rs
src/config/: gateway_store.rs  mod.rs  read_config_file.rs  resolve_gateways.rs
src/inbox/: envelope.rs  identity.rs  mod.rs  recompute_hashes.rs
src/output/: mod.rs  render_human.rs  render_inbox_list.rs
src/state/: bookmark.rs  mod.rs
src/util/: base64.rs  color.rs  error.rs  hex.rs  mod.rs  version.rs
tests/: certificate.rs  commands.rs  ergonomics.rs  verify.rs
tests/common/: mod.rs
tests/fixtures/sdk-py/: README.md  mainnet-corpus.json
tests/fixtures/sdk-py/validator/: validator-negative.json
tests/fixtures/sdk-ts/: verify-report.schema.json
tests/fixtures/sdk-ts/cose/: sign1-build.json
tests/fixtures/sdk-ts/wallet-cose/: README.md  _build-tampered-fixtures.test.ts
