[package]
name = "cardanowall-cli"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Cardanowall <hello@cardanowall.com>"]
description = "The cardanowall CLI: a standalone CIP-309 Proof-of-Existence verifier and toolkit."
repository = "https://github.com/cardanowall/cip309-cli"
homepage = "https://github.com/cardanowall/cip309-cli"
documentation = "https://docs.rs/cardanowall-cli"
readme = "README.md"
keywords = ["cardano", "cip-309", "proof-of-existence", "cli", "verifier"]
categories = ["command-line-utilities", "cryptography"]

# Standalone crate: this lives inside a JavaScript/pnpm monorepo that has no
# parent Cargo workspace. The empty table makes the crate its own workspace
# root so cargo never walks upward looking for one. Mirrors packages/sdk-rs.
[workspace]

[[bin]]
name = "cardanowall"
path = "src/main.rs"

[dependencies]
# The CIP-309 SDK crate `cardanowall` (from crates.io) — all record-prep,
# verification, sealed-PoE, merkle, and gateway-client logic lives there;
# this CLI is a thin argument-parsing + output shell over it. The SDK is
# published before the CLI; the version tracks the SDK crate's version.
cardanowall = "0.0.0"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
hex = "0.4.3"
owo-colors = "4"
rpassword = "7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "0.8"
zeroize = "1"

[dev-dependencies]
tempfile = "3"
